# personal_finance

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: analyse.py  import_transactions.py  main.py  migrate_transactions.py  view_transactions.py
src/: main.py  readers.py  rules.py  statements.py  transactions.py
src/statement_processor/: data_utils.py  db.py  models.py  readers.py  rules.py  schema.sql  statements.py  transactions.py  ui_components.py  utils.py
src/statement_processor/readers/: api.py  revolut.py  santander.py
statement_processor/: main.py  readers.py  rules.py  statements.py  transactions.py
tests/: test_db.py  test_smoke.py
